# apkdoctor

./: Cargo.toml  LICENSE  README
benches/: benchmark.rs
src/: decode.rs  dex_model.rs  dex_structs.rs  encode.rs  encoded_value_utils.rs  lib.rs
src/instructions/: mod.rs  op_to_str.rs
tests/: dex_parser_tests.rs
