[package]
name = "apkdoctor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
jemallocator = "0.5.0"
residua-mutf8 = "2.0.0"

[features]
html_reports = []
